--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*=====================
+    Global Setting
+=======================*/
+
+a,
+p,
+button,
+input,
+div,
+span,
+td,
+textarea {
+  border: none;
+  text-decoration: none;
+
+  &:focus {
+      outline: none !important;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/*=====================
+  Custom Class
+=======================*/
+
+@import 'assets/scss/utility';
