--- a/src/assets/scss/_utility.scss
+++ b/src/assets/scss/_utility.scss
@@ -43,7 +43,7 @@
 /*      Align     */
 
 .absolute-center {
-  position: absolute;
+  position: absolute !important;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
