feat: 新增二選一

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,13 @@ textarea {
 }
 
 /*=====================
+  Library
+=======================*/
+
+@import "~slick-carousel/slick/slick";
+@import "~slick-carousel/slick/slick-theme";
+
+/*=====================
   Custom Class
 =======================*/
 
