--- a/src/assets/scss/_utility.scss
+++ b/src/assets/scss/_utility.scss
@@ -2,102 +2,106 @@
    Utility
 =======================*/
 
+.underline {
+    border-bottom: 1px solid black;
+}
+
 .rounded {
-  border-radius: 999px !important;
+    border-radius: 999px !important;
 }
 
 .text-reset {
-  font: inherit !important;
-  color: inherit !important;
-  letter-spacing: inherit !important;
+    font: inherit !important;
+    color: inherit !important;
+    letter-spacing: inherit !important;
 }
 
 .overflow-hidden {
-  overflow: hidden !important;
+    overflow: hidden !important;
 }
 
 .hidden {
-  position: fixed !important;
-  opacity: 0 !important;
-  cursor: default !important;
-  color: transparent !important;
-  background-color: transparent !important;
-  border-color: transparent !important;
-  pointer-events: none !important;
+    position: fixed !important;
+    opacity: 0 !important;
+    cursor: default !important;
+    color: transparent !important;
+    background-color: transparent !important;
+    border-color: transparent !important;
+    pointer-events: none !important;
 }
 
 .hide {
-  opacity: 0 !important;
-  pointer-events: none;
+    opacity: 0 !important;
+    pointer-events: none;
 }
 
 .show {
-  opacity: 1 !important;
-  pointer-events: auto;
+    opacity: 1 !important;
+    pointer-events: auto;
 }
 
 .no-pointer {
-  pointer-events: none;
+    pointer-events: none;
 }
 
 /*      Align     */
 
 .absolute-center {
-  position: absolute !important;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .absolute-horizontal {
-  position: absolute !important;
-  left: 50%;
-  transform: translateX(-50%);
+    position: absolute !important;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .absolute-vertical {
-  position: absolute !important;
-  top: 50%;
-  transform: translateY(-50%);
+    position: absolute !important;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 /*      Cursor     */
 
 .c-auto {
-  cursor: auto;
+    cursor: auto;
 }
 
 .c-help {
-  cursor: help;
+    cursor: help;
 }
 
 .c-wait {
-  cursor: wait;
+    cursor: wait;
 }
 
 .c-cross {
-  cursor: crosshair;
+    cursor: crosshair;
 }
 
 .c-disabled {
-  cursor: not-allowed !important;
-  pointer-events: unset !important;
+    cursor: not-allowed !important;
+    pointer-events: unset !important;
 }
 
 .c-zoomIn {
-  cursor: zoom-in;
+    cursor: zoom-in;
 }
 
 .c-grab {
-  cursor: grab;
+    cursor: grab;
 }
 
 .c-pointer {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 /*      z index     */
 
 .z-top {
-  z-index: 1600 !important;
+    z-index: 1600 !important;
 }
