--- a/src/assets/scss/_utility.scss
+++ b/src/assets/scss/_utility.scss
@@ -6,6 +6,10 @@
     border-bottom: 1px solid black;
 }
 
+.noShadow {
+    box-shadow: none;
+}
+
 .rounded {
     border-radius: 999px !important;
 }
